Home page design update

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -94,3 +94,7 @@
     background : url('../assets/treking-trail.jpg');
     background-size: cover;
 }
+.homeTitle{
+    font-size: 25px !important;
+    color: #007aff !important;
+}
